--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   font-family: "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-   
+
 }
 
 ::-moz-selection {
@@ -704,6 +704,29 @@ a:hover {
   /* text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
     -1px 1px 0 #000, 1px 1px 0 #000; */
   font-weight: 900;
+}
+#GALLERY{
+position: absolute;
+content: "\e313";
+font-size: 16px;
+top: 50%;
+right: 0;
+-webkit-transform: translateY(-50%);
+-ms-transform: translateY(-50%);
+transform: translateY(-50%);
+font-family: "icomoon";
+}
+
+.site-navbar-wrap a:link {
+    color: #ffffff99;
+    /* padding: 10px; */
+}
+.site-navbar-wrap a:hover {
+    color: #ffffff;
+    /* padding: 10px; */
+}
+#GALLERY:hover{
+  color: #ffffff;
 }
 @media (min-width: 1000px) {
   .site-blocks-cover h1 {
@@ -1916,4 +1939,13 @@ a:hover {
 @keyframes upgo {
   0%   { transform: translateY(50%);}
   100% { transform: translateY(0);}
+}
+.dropdown{
+  position: static;
+}
+@@media (min-width: 992px) {
+  .dropdown-toggle{
+    transition: all 0.3s
+    cubic-bezier(0.5, 1, 0.7, 1);
+  }
 }
