--- a/css/style.css
+++ b/css/style.css
@@ -263,13 +263,13 @@ a:hover {
 
 /* Navbar */
 .site-navbar-wrap {
-  background: #1f1f1f !important;
+  background: White !important;
   position: relative;
   z-index: 99;
   width: 100%;
 }
 .site-navbar-wrap a {
-  color: #fff;
+  color: black;
 }
 .site-navbar-wrap .site-navbar-top {
   font-size: 0.8rem;
@@ -298,9 +298,10 @@ a:hover {
   margin-bottom: 0;
 }
 .site-navbar .site-navigation .site-menu .active > a {
-  color: #fff;
+  color: black;
 }
 .site-navbar .site-navigation .site-menu a {
+  color: #3c3636d1;
   text-decoration: none !important;
   font-size: 15px;
   display: inline-block;
@@ -313,12 +314,12 @@ a:hover {
   padding: 10px 10px;
   text-transform: uppercase;
   letter-spacing: 0.05em;
-  color: rgba(255, 255, 255, 0.6);
+  color: #3c3636d1;
   font-size: 15px;
   text-decoration: none !important;
 }
 .site-navbar .site-navigation .site-menu > li > a:hover {
-  color: #fff;
+  color: black;
 }
 .site-navbar .site-navigation .site-menu > li:last-child {
   padding-right: 0;
@@ -629,6 +630,10 @@ a:hover {
   padding-left: 20px;
   font-size: 20px;
 }
+.site-mobile-menu .site-nav-wrap > li > a {
+    padding-left: 20px;
+    font-size: 20px;
+}
 .site-mobile-menu .site-nav-wrap > li > ul {
   padding: 0;
   margin: 0;
@@ -705,29 +710,17 @@ a:hover {
     -1px 1px 0 #000, 1px 1px 0 #000; */
   font-weight: 900;
 }
-#GALLERY{
-position: absolute;
-content: "\e313";
-font-size: 16px;
-top: 50%;
-right: 0;
--webkit-transform: translateY(-50%);
--ms-transform: translateY(-50%);
-transform: translateY(-50%);
-font-family: "icomoon";
-}
+
 
 .site-navbar-wrap a:link {
-    color: #ffffff99;
+    color: #3c3636d1;
     /* padding: 10px; */
 }
 .site-navbar-wrap a:hover {
-    color: #ffffff;
+    color: black;
     /* padding: 10px; */
 }
-#GALLERY:hover{
-  color: #ffffff;
-}
+
 @media (min-width: 1000px) {
   .site-blocks-cover h1 {
     font-size: 4rem;
@@ -892,6 +885,7 @@ font-family: "icomoon";
   .site-block-half .image {
     margin-bottom: 50px;
   }
+
 }
 
 .site-block-half .text {
@@ -1603,7 +1597,7 @@ font-family: "icomoon";
   font-size: 1.1rem;
   position: relative;
   padding-bottom: 10px;
-  margin-bottom: 20px;
+  /*margin-bottom: 20px; */
 }
 .block-feature h2:after,
 .block-feature .heading:after,
@@ -1947,5 +1941,36 @@ font-family: "icomoon";
   .dropdown-toggle{
     transition: all 0.3s
     cubic-bezier(0.5, 1, 0.7, 1);
+  }
+}
+#GALLERY{
+color: #3c3636d1;
+text-transform: uppercase;
+position: absolute;
+content: "\e313";
+font-size: 16px;
+top: 50%;
+right: 0;
+-webkit-transform: translateY(-50%);
+-ms-transform: translateY(-50%);
+transform: translateY(-50%);
+font-family: "icomoon";
+}
+#GALLERY a:hover{
+  color: black;
+}
+#kala{
+  text-transform: uppercase;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+#kala:hover{
+  color: black;
+}
+@media only screen and (max-width:991.98px){
+  #kala {
+    font-size: 20px;
+    text-transform: none;
+    padding-left: 20px;
   }
 }
