--- a/css/style.css
+++ b/css/style.css
@@ -578,6 +578,7 @@ a:hover {
   display: block;
   position: relative;
   color: #212529;
+  font-size: 20px;
 }
 .site-mobile-menu .site-nav-wrap a:hover {
   color: #f23a2e;
@@ -1981,13 +1982,36 @@ font-family: "icomoon";
     font-size: 20px;
     text-transform: none;
     padding-left: 20px;
+    display: none;
   }
   .logo{
     width: 290px;
   }
+
   .dropdown-content {
     color: #f7f9fa;
     display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    min-width: 100%;
+    width: 100%;
+  }
+}
+@media only screen and (min-width:991.98px){
+  #kala {
+    font-size: 15px;
+    text-transform: uppercase;
+  }
+  .logo{
+    width: 290px;
+  }
+  .gora{
+    display: none;
+  }
+  .dropdown-content {
+    color: #f7f9fa;
     position: absolute;
     background-color: #f1f1f1;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
