--- a/css/style.css
+++ b/css/style.css
@@ -1975,7 +1975,10 @@ font-family: "icomoon";
 }
 .logo {
   width:330px;
-  height:85px;
+  height:70px;
+  position: fixed;
+  top: 0;
+  left: 40px;
 }
 @media only screen and (max-width:991.98px){
   #kala {
