--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,7 @@ a:hover {
 /* Navbar */
 .site-navbar-wrap {
   background: White !important;
-  position: relative;
+  position: fixed;
   z-index: 99;
   width: 100%;
 }
@@ -1989,6 +1989,8 @@ font-family: "icomoon";
   }
   .logo{
     width: 290px;
+    left: 5px;
+    top: 5px;
   }
 
   .dropdown-content {
