--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -36,7 +36,7 @@ a:hover {
 }
 
 .bg-black {
-  background: #000 !important;
+  background:black !important;
 }
 
 .line-height-sm {
@@ -110,7 +110,7 @@ a:hover {
 }
 
 .bg-black {
-  background: #000;
+  background: black;
 }
 .fb-embed {
   
@@ -266,13 +266,13 @@ a:hover {
 
 /* Navbar */
 .site-navbar-wrap {
-  background: #1f1f1f !important;
+  background: white !important;
   position: relative;
   z-index: 99;
   width: 100%;
 }
 .site-navbar-wrap a {
-  color: #fff;
+  color: black;
 }
 .site-navbar-wrap .site-navbar-top {
   font-size: 0.8rem;
@@ -301,12 +301,16 @@ a:hover {
   margin-bottom: 0;
 }
 .site-navbar .site-navigation .site-menu .active > a {
-  color: #fff;
+  color: white;
+  background-color: red;
+  border-radius: 5px;
 }
 .site-navbar .site-navigation .site-menu a {
+  color: #3c3636d1;
   text-decoration: none !important;
   font-size: 15px;
   display: inline-block;
+  font-weight: bold;
 }
 .site-navbar .site-navigation .site-menu > li {
   display: inline-block;
@@ -316,19 +320,19 @@ a:hover {
   padding: 10px 10px;
   text-transform: uppercase;
   letter-spacing: 0.05em;
-  color: rgba(255, 255, 255, 0.6);
+  color: #3c3636d1;
   font-size: 15px;
   text-decoration: none !important;
 }
 .site-navbar .site-navigation .site-menu > li > a:hover {
-  color: #fff;
+  color: black;
 }
 .site-navbar .site-navigation .site-menu > li:last-child {
   padding-right: 0;
 }
-.site-navbar .site-navigation .site-menu > li:last-child > a {
+/* .site-navbar .site-navigation .site-menu > li:last-child > a {
   padding-right: 0;
-}
+} */
 .site-navbar .site-navigation .site-menu .has-children {
   position: relative;
 }
@@ -577,6 +581,7 @@ a:hover {
   display: block;
   position: relative;
   color: #212529;
+  font-size: 20px;
 }
 .site-mobile-menu .site-nav-wrap a:hover {
   color: #f23a2e;
@@ -627,6 +632,10 @@ a:hover {
   position: relative;
   float: left;
   width: 100%;
+}
+.site-mobile-menu .site-nav-wrap > li > a {
+  padding-left: 20px;
+  font-size: 20px;
 }
 .site-mobile-menu .site-nav-wrap > li > a {
   padding-left: 20px;
@@ -708,6 +717,17 @@ a:hover {
     -1px 1px 0 #000, 1px 1px 0 #000; */
   font-weight: 900;
 }
+
+
+.site-navbar-wrap a:link {
+  color: #3c3636d1;
+  /* padding: 10px; */
+}
+.site-navbar-wrap a:hover {
+  color: black;
+  /* padding: 10px; */
+}
+
 @media (min-width: 1000px) {
   .site-blocks-cover h1 {
     font-size: 4rem;
@@ -872,6 +892,7 @@ a:hover {
   .site-block-half .image {
     margin-bottom: 50px;
   }
+
 }
 
 .site-block-half .text {
@@ -1949,26 +1970,188 @@ a:hover {
   0%   { transform: translateY(50%);}
   100% { transform: translateY(0);}
 }
-
+.dropdown{
+  position: static;
+}
+@media (min-width: 300px) {
+  .dropdown-toggle{
+    transition: all 0.3s
+    cubic-bezier(0.5, 1, 0.7, 1);
+  }
 
 .marq{
   display: inline !important;
   width: 200px;
   height:200px;
 }
+}
+@media (min-width: 992px) {
+  .dropdown-toggle{
+    transition: all 0.3s
+    cubic-bezier(0.5, 1, 0.7, 1);
+  }
+
+.marq{
+  display: inline !important;
+  width: 200px;
+  height:200px;
+}
+}
+visible{
+  height: 100px;
+}
+#GALLERY{
+color: #3c3636d1;
+text-transform: uppercase;
+position: absolute;
+content: "\e313";
+font-size: 16px;
+top: 50%;
+right: 0;
+-webkit-transform: translateY(-50%);
+-ms-transform: translateY(-50%);
+transform: translateY(-50%);
+font-family: "icomoon";
+}
+#GALLERY a:hover{
+  color: black;
+}
+#kala{
+  font-size: 20px;
+  text-transform: uppercase;
+  padding: 10px;
+}
+#kala:hover{
+  color: black;
+}
+.logo {
+  width:330px;
+  height:70px;
+  position: fixed;
+  top: 0;
+  left: 40px;
+}
+@media only screen and (max-width:991.98px){
+  #kala {
+    font-size: 20px;
+    text-transform: none;
+    padding-left: 20px;
+    display: none;
+  }
+  .logo{
+    width: 290px;
+  }
 marquee > h2 {
 display: inline;
 }
 
-
-
-
+.dropdown-content {
+  color: #f7f9fa;
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  min-width: 100%;
+  width: 100%;
+}
+}
+marquee > h2 {
+  display: inline;
+  }
+@media only screen and (min-width:991.98px){
+  #kala {
+    font-size: 15px;
+    text-transform: uppercase;
+  }
+  .logo{
+    width: 290px;
+  }
+  .gora{
+    display: none;
+  }
+  .dropdown-content {
+    color: #f7f9fa;
+    position: absolute;
+    background-color: #f1f1f1;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    min-width: 100%;
+    width: 100%;
+  }
+}
+.dropbtn {
+  background-color: none;
+  opacity: 100%;
+  color: black;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+}
 @media (min-width: 400px) {
   .heading{
     margin-left: -100px !important;
     
   }
+  .likeusfb{
+    text-align: left;
+  }
 }
+@media (min-width:1200px) {
+  
+
+  .marquee1 {
+    margin-left: 100px;
+    
+    width: 1000px;
+    
+  }
+  .heading{
+    margin-left: 0px !important;
+    }
+  }
+    .dropdown {
+      color: white;
+      position: relative;
+      display: inline-block;
+    }
+    
+    .dropdown-content {
+      color: #f7f9fa;
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+      min-width: 80px;
+      width: 100%;
+    }
+    
+    .dropdown-content a {
+      color: #f7f9fa;
+      opacity: 100%;
+      padding: 16px 16px;
+      text-decoration: none;
+      display: block;
+      width: 100%;
+    }
+    
+    .dropdown-content a:hover {
+      color: black;
+      background-color: #ddd;
+    }
+    
+    .dropdown:hover .dropdown-content {
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin-right: 0;
+      padding-right: 0;
+    }
+    
+    .dropdown:hover .dropbtn {background-color: #3e8e41;}
+  }
+
 
 @media (min-width:1300px) {
   
@@ -1982,16 +2165,61 @@ display: inline;
   .heading{
     margin-left: 0px !important;
     }
+  }
+    .dropdown {
+      color: white;
+      position: relative;
+      display: inline-block;
+    }
+    
+    .dropdown-content {
+      color: #f7f9fa;
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+      min-width: 80px;
+      width: 100%;
+    }
+    
+    .dropdown-content a {
+      color: #f7f9fa;
+      opacity: 100%;
+      padding: 16px 16px;
+      text-decoration: none;
+      display: block;
+      width: 100%;
+    }
+    
+    .dropdown-content a:hover {
+      color: black;
+      background-color: #ddd;
+    }
+    
+    .dropdown:hover .dropdown-content {
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin-right: 0;
+      padding-right: 0;
+    }
+    
+    .dropdown:hover .dropbtn {background-color: #3e8e41;}
+  }
 
 
+  @media (min-width:1300px) {
     .mainc{
       min-width: 1300px;
     }
-
+    .likeusfb{
+      /* text-align: left !important; */
+    }
     .fb-embed {
       
       margin-top: -330px;
-      text-align: left;
+      text-align: left ;
       color: black;
       font-size: 24px;
       margin-bottom: 20px ;
@@ -2003,7 +2231,7 @@ display: inline;
     .marquee1 {
       margin-left: 100px;
       
-      width: 1300px;
+      width: 1230px;
       
     }
     .heading{
@@ -2024,5 +2252,44 @@ display: inline;
         margin-bottom: 20px ;
       }
     }
+  
+
+    .prevspons {
+      margin-left: 10%;
+    }
+    /* @media  (max-width:1300px){
+      .prevspons{
+        margin-left: 16%;
+      }
+    } */
+@media  (max-width:767px){
+  .prevspons{
+    margin-left: 18%;
+  }
+}
+
+@media (min-device-width: 1200px) { 
+  .site-navbar{
+    margin-left: -100px;
+  }
+}
+@media (min-device-width: 1400px) { 
+  .site-navbar{
+    margin-left: -50px;
+  }
+}
+@media (min-device-width: 1600px) { 
+  .site-navbar{
+    margin-left: 50px;
+  }
+}
+
+@media (min-device-width: 1700px) { 
+  .site-navbar{
+    margin-left: 100px;
+  }
+}
 
 
+
+  
